--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
-
 <html>
-
   <head>
-
     <title>Cute Puppies I want</title>
     <h1>Cute Dogs</h1>
-
   </head>
-
-  <body> I chose this topic because I love dogs, especially puppies. I decided to choose these two photos because I thought they were so so so cute. In the future I would love to have a Australian Shepherd.
-
-  </body>
-
+  <body> I chose this topic because I love dogs, especially puppies. I decided to choose these two photos because I thought they were so so so cute. In the future I would love to have an Australian Shepherd.
+</body>
 </html>
 <figure>
     <h2>Puppy Yawning</h2>
