--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <body>
+<p> I love drawing and painting, but some hobbies of mine are playing ringette and volleyball. I had to quit volleyball and ringette to come here and do school. My end goal is to become a really good graphic designer. I would to travel the world as well! </p>
+    </body>
   <head>
     <title>Cute Puppies I want</title>
     <h1>Cute Dogs</h1>
@@ -27,7 +30,7 @@
     <td>Beagle</td>
 </tr>
 <tr>
-    <tdL>cute animal</tdL>
+    <td>cute animal</td>
     <td>Grey and Brown</td>
     <td>Australian Shepherd</td>
 </tr>
