--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>Cute Puppies I want</title>
+    <ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="Cute Dogs.asp">Cute Dogs</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+</ul>    
     <h1>Cute Dogs</h1>
   </head>
     <body>
