--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
   <head>
     <title>Cute Puppies I want</title>
-    <ul>
-  <li><a href="default.asp">Home</a></li>
-  <li><a href="Cute Dogs.asp">Cute Dogs</a></li>
-  <li><a href="contact.asp">Contact</a></li>
-</ul>    
     <h1>Cute Dogs</h1>
   </head>
     <body>
 <p> I love drawing and painting, but some hobbies of mine are playing ringette and volleyball. I had to quit volleyball and ringette to come here and do school. My end goal is to become a really good graphic designer. I would to travel the world as well! </p>
     </body>
+  <nav class="menu">
+  <ul>
+    <li><a href="#">Biography</a></li>
+    <li><a href="#">Cute Dogs</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+</nav>
 </html>
 <figure>
     <h2>Puppy Yawning</h2>
