--- a/Index.html
+++ b/Index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
 <html>
-
   <head>
+    <link href="main.css" rel="stylesheet" />
 
     <title>Cute Puppies I want</title>
     <h1>Cute Dogs</h1>
@@ -22,7 +22,7 @@
 <h3>Cute Puppies</h3>
       <figure>
         <img src=<figure>
-            <img src=https://images.unsplash.com/photo-1525253013412-55c1a69a5738?auto=format&fit=crop&q=80&w=1470&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D alt="Puppies" />
+          <img src=https://images.unsplash.com/photo-1525253013412-55c1a69a5738?auto=format&fit=crop&q=80&w=1470&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D alt="Puppies" />
             <figcaption>Puppies piled on top of eachother</figcaption>
 <table>
 <tr>
