--- a/index.html
+++ b/index.html
@@ -2,29 +2,31 @@
 
 <html>
   <head>
+
     <link href="main.css" rel="stylesheet" />
 
     <title>Cute Puppies I want</title>
-    <h1>Cute Dogs</h1>
-
-  </head>
-
+  
+    <script async src="file.js"></script>
+  </head> 
+  <h1 id="Cute-Dogs">Cute Dogs</h1>
   <body> I chose this topic because I love dogs, escpecially puppies. I decided to choose these two photos because I thought they were so so so cute. In the future I would love to have a Australian Shepherd.
-
-  </body>
-
-</html>
-<figure>
-    <h2>Puppy Yawning</h2>
-    <img src=<figure>
-        <img src=https://images.unsplash.com/photo-1548658166-136d9f6a7e76?auto=format&fit=crop&q=80&w=928&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D alt="Puppy Yawning" />
+    
+ 
+<figure id="images">
+    <button id="btn-counter">Click Here</button>
+    <paragraph id="txt-counter">1</paragraph>
+  <h2>Puppy Yawning</h2>
+    <figure>
+        <img src="https://images.unsplash.com/photo-1548658166-136d9f6a7e76?auto=format&fit=crop&q=80&w=928&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Puppy Yawning" /> 
         <figcaption>Puppy Yawning</figcaption>
-<h3>Cute Puppies</h3>
+        </figure>
+<h3>Cute Puppies</h3> 
       <figure>
-        <img src=<figure>
-          <img src=https://images.unsplash.com/photo-1525253013412-55c1a69a5738?auto=format&fit=crop&q=80&w=1470&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D alt="Puppies" />
+          <img src="https://images.unsplash.com/photo-1525253013412-55c1a69a5738?auto=format&fit=crop&q=80&w=1470&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Puppies" />
             <figcaption>Puppies piled on top of eachother</figcaption>
-<table>
+            </figure>
+<table id="table">
 <tr>
 <th>Puppies</th>
 <th>Colour</th>
@@ -36,10 +38,15 @@
     <td>Beagle</td>
 </tr>
 <tr>
-    <tdL>cute animal</tdL>
+    <td>cute animal</td>
     <td>Grey and Brown</td>
     <td>Australian Shepherd</td>
 </tr>
 </table>
-<address>HMU on snap @caryss_hill</address>
-<footer>Free to use under the Unsplash License</footer>
+<ol id="numbers"></ol>
+<address><button onclick="sayHello()"> HMU on snap @caryss_hill</button>
+</address>
+<footer id="footer">Free to use under the Unsplash License</footer>
+</body>
+
+</html>
